# fabric-jumpstart

./: package-lock.json
.github/workflows/: gci-full.yaml
src/fabric_jumpstart/: CONTRIBUTING.md  README.md  STANDARDS.md  hatch_build.py  pyproject.toml  settings.json
src/fabric_jumpstart/fabric_jumpstart/: core.py  installer.py  utils.py  workspace_manager.py
src/fabric_jumpstart/fabric_jumpstart/jumpstarts/community/: fabric-cost-analysis.yml
src/fabric_jumpstart/fabric_jumpstart/jumpstarts/core/: analytics-roadshow-lab.yml  banking-loan-fraud.yml  fpm-activity-events.yml  fpm-capacity-events.yml  fpm-fabric-inventory.yml  fpm-gateway-monitoring.yml  fpm-workspace-item-events.yml  grid-intelligence.yml  healthcare-billing-system.yml  materialized-lake-views.yml  multivariate-anomaly-detection.yml  retail-sales-test.yml  retail-sales.yml  spark-monitoring-and-optimization.yml  stateful-streaming-lakehouse.yml  stateful-streaming-rocksdb.yml  telecom-call-data-records.yml
src/fabric_jumpstart/fabric_jumpstart/ui/: catalog.py  install_status.py  ui.css
src/fabric_jumpstart/tests/: schemas.py  test_credential.py  test_installer.py  test_registry.py  test_upload.py  test_workload_icons.py
src/fabric_jumpstart_web/: .gitignore  package.json
src/fabric_jumpstart_web/__tests__/: content-contract.test.ts  contract.test.ts  toc-headings.test.ts
src/fabric_jumpstart_web/content/scenarios/: README.md
src/fabric_jumpstart_web/locales/en/: home.json  scenarios.json  universe.json
src/fabric_jumpstart_web/scripts/: generate-content.ts
src/fabric_jumpstart_web/src/app/: layout.tsx
src/fabric_jumpstart_web/src/app/catalog/: page.tsx  (+2 more)
src/fabric_jumpstart_web/src/data/: featured.json
src/fabric_jumpstart_web/src/hooks/: useIntersectionObserver.ts
src/fabric_jumpstart_web/src/styles/: appStyles.tsx  global.css  theme.tsx
src/fabric_jumpstart_web/src/types/: scenario.ts
src/fabric_jumpstart_web/src/utils/: markdown.ts
tools/: render-diagrams.ts
(+41 files in other folders)
